tests/pos/todo/objects/07-object.ts

/*@ obj :: { 
    x: [Immutable] number; 
    y: { number | v = this.x }; 
  } */
var obj = { x: 1, y: 1 };

