tests/neg/objects/07-object.ts

/*@ obj :: { (Immutable) x: number; y: { number | v = this.x }; } */
let obj = { x: 1, y: 2 };
